<resources>
    <string name="app_name" translatable="false">LetsGO App</string>
    <string name="app_logo" translatable="false">Logo LetsGo</string>
    <string name="user_id">User ID</string>
    <string name="start_point">From</string>
    <string name="end_point">To</string>
    <string name="button_text" translatable="false">letsGO!!!</string>
    <string name="history_text">Travel History</string>
    <string name="travel_options_text">Travel Options</string>
    <string name="labelName">Name:</string>
    <string name="labelDescription">Description:</string>
    <string name="labelVehicle">Vehicle:</string>
    <string name="labelRating">Rating:</string>
    <string name="labelValue">Value:</string>
    <string name="buttonPickDriverText">Choose this</string>
    <string name="generate">Generate</string>
    <string-array name="travel_modes">
        <item>Carro</item>
        <item>Ônibus</item>
        <item>Trem</item>
    </string-array>
</resources>