<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/app_logo"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/formContainer"
            style="@style/FormContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            style="@style/EditText"
            android:id="@+id/userId"
            android:maxLength="10"
            app:layout_constraintStart_toStartOf="@id/formContainer"
            app:layout_constraintEnd_toEndOf="@id/formContainer"
            app:layout_constraintTop_toTopOf="@id/formContainer"
            android:hint="@string/user_id" />

        <EditText
            style="@style/EditText"
            android:id="@+id/startPoint"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="@id/formContainer"
            app:layout_constraintEnd_toEndOf="@id/formContainer"
            app:layout_constraintTop_toBottomOf="@+id/userId"
            android:hint="@string/start_point" />

        <EditText
            style="@style/EditText"
            android:id="@+id/endPoint"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="@id/formContainer"
            app:layout_constraintEnd_toEndOf="@id/formContainer"
            app:layout_constraintTop_toBottomOf="@+id/startPoint"
            android:hint="@string/end_point" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button"
            android:id="@+id/bt_letsGO"
            android:text="@string/button_text"
            app:layout_constraintBottom_toBottomOf="@+id/formContainer"
            app:layout_constraintEnd_toEndOf="@+id/formContainer"
            app:layout_constraintTop_toBottomOf="@+id/endPoint" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
