<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <TextView
        android:id="@+id/title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/formContainer"
        style="@style/FormContainer"
        android:layout_width="wrap_content"
        android:layout_height="301dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        style="@style/EditText"
        android:id="@+id/costumerId"
        app:layout_constraintStart_toStartOf="@id/formContainer"
        app:layout_constraintEnd_toEndOf="@id/formContainer"
        app:layout_constraintTop_toTopOf="@id/formContainer"
        android:hint="@string/user_id" />

    <Spinner
        android:id="@+id/driverSelect"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/formContainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/formContainer"
        app:layout_constraintTop_toBottomOf="@id/costumerId" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_enter"
        style="@style/Button"
        android:layout_marginBottom="20dp"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="@+id/formContainer"
        app:layout_constraintEnd_toEndOf="@+id/formContainer"
        app:layout_constraintStart_toStartOf="@+id/formContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyList"
        style="@style/ListContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/formContainer"
        app:layout_constraintStart_toStartOf="@+id/formContainer"
        app:layout_constraintTop_toBottomOf="@id/formContainer"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>